# haskell-sdr-adsb-decoder

./: README.md  adsb-decoder.cabal  shell.nix
cbits/: rtlsdr_wrapper.c
src/ADSB/: AircraftTracker.hs  Decoder.hs  Detector.hs  ErrorCorrection.hs
src/ADSB/Decoder/: CRC.hs  OperationStatus.hs  Position.hs  Util.hs  Velocity.hs
src/RTLSDR/: FFI.hs  Types.hs
test/: Spec.hs
